--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,15 @@
   margin: 0 0 20px 0;
 }
 
-.ui.stacked.segment {
+.ui.stacked.segment, .ui.menu {
   border-color: orange;
+}
+
+.dashboard-tabs .item {
+  width: 50%;
+}
+
+.login-form {
+  width: 50%;
+  margin: 0 auto;
 }
