--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,6 +10,15 @@
   width: 50%;
 }
 
+select {
+  margin: 0 0 10px 0;
+}
+
+.ui.large.form {
+  width: 400px;
+  margin: 0 auto;
+}
+
 .login-form {
   width: 50%;
   margin: 0 auto;
